# MalDocShield

./: CMakeLists.txt  Makefile  README.md  config.ini  injector.py
include/: OfficeApiHook.h  detours.lib
src/: config.cpp  detection.cpp  dllmain.cpp  hooks_dll.cpp  hooks_file.cpp  hooks_memory.cpp  hooks_network.cpp  hooks_process.cpp  hooks_registry.cpp  injection.cpp  logging.cpp  utils.cpp
